# reverse-tasks

./: pyproject.toml
lab_1_radon/: radon.ipynb
lab_2_rays/: lab_2.ipynb
lab_3_reverse_kinematic/: lab_3.ipynb
